--- a/public/formulario.html
+++ b/public/formulario.html
@@ -120,8 +120,7 @@
                 <p class="informacoes-album">
                     <u id="dtLancamento">Obrigado por se cadastrar!</u><br>
                     <b id="qtdMusicas"></b><br>
-                    <span id="faixas">
-                        Responda as perguntas para melhor integração de todos os fâs e usuários do site!</span>
+                    <span id="faixas">VOCÊ SABIA?<br><br> As letras das músicas frequentemente abordam temas como desigualdade social, violência urbana, corrupção e injustiça, refletindo a realidade das cominudades marginalizadas do Brasil e dando voz aos excluídos </span>
                 </p>
             </div>
         </section>
