--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>O Rappa | Página Inicial</title>
 
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="shortcut icon" href="./assets/icones/favIcon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icon/favIcon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Convergence&family=Lato:wght@300;400;700;900&family=Mukta:wght@300;400;600;700;800&family=Noto+Sans:wght@400;700&display=swap"
@@ -25,7 +25,7 @@
             <a href="./index.html">INICIAL</a>
             <a href="#chamaSobre">SOBRE</a>
             <a href="#Discografia">DISCOGRAFIA</a>
-            <a href="./quiz.html">QUIZ</a>
+            <a href="./antesQuiz.html">QUIZ</a>
             <a href="./login.html">LOGIN</a>
             <a href="./cadastro.html">CADASTRO</a>
         </nav>
@@ -50,7 +50,7 @@
         </div>
 
         <!-- Slideshow container -->
-        <div  class="sobreFoto">
+        <div class="sobreFoto">
             <div class="sobreFoto-container">
                 <!-- Full-width images with number and caption text -->
                 <div class="Integrantes fade">
@@ -90,13 +90,6 @@
         </div>
         <br>
 
-        <!-- The radios/circles -->
-        <div style="text-align:center">
-            <span class="radio" onclick="currentSlide(1)"></span>
-            <span class="radio" onclick="currentSlide(2)"></span>
-            <span class="radio" onclick="currentSlide(3)"></span>
-        </div>
-    </div>
     </div>
 
     <div id="Discografia" class="wrapper">
@@ -127,26 +120,19 @@
                 <br>
                 Tudo bem?
                 <br>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis harum deleniti iste vero
-                dolores facilis. Iusto, ducimus dolor culpa praesentium corrupti quos maiores placeat exercitationem
-                officia provident dolorem at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-                perspiciatis debitis, veniam, sapiente eligendi inventore, sequi totam earum ipsum corporis similique?
-                Eos voluptates nam odit quasi alias, asperiores nemo possimus!
+                Me chamo Guilherme Borin e sou um grande fã da banda "O Rappa". Meu contato com a banda começou enquanto ainda criança navegava pelo YouTube, assistindo a diversos clipes que me cativaram pela diferença das letras e a sonoridade única. Desde então, venho acompanhando a trajetória deles e apreciando cada música. Estou aqui para compartilhar essa paixão e proporcionar a vocês um espaço dedicado à história e ao legado de "O Rappa". Venha conhecer mais sobre essa banda fantástica!
             </p>
             <div>
             </div>
         </div>
         <div class="sobreMim-foto">
-            <!-- Insira sua Foto aqui -->
         </div>
     </div>
 
     <footer class="rodape">
         <div class="column1">
             <h2>O Rappa</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eligendi labore sapiente. Repellendus
-                consequuntur perspiciatis beatae ab dicta velit quasi non quis nulla, adipisci incidunt molestias ipsum
-                hic animi? Reiciendis.
+            <p>Site criado com o intuito de celebrar e compartilhar a história e a trajetória da banda "O Rappa". Aqui, fãs e curiosos podem explorar informações sobre a carreira do grupo, seus álbuns, músicas e influência no cenário musical.
             </p>
             <div class="logos">
                 <a href="https://www.facebook.com"><img class="icone1" src="./assets/icones/iconefacebook.png"
@@ -164,7 +150,7 @@
             <a href="#chamaSobre">Sobre</a>
             <a href="#Discografia">Álbuns</a>
             <a href="./cadastro.html">Cadastro</a>
-            <a href="./quiz.html">Quiz</a>
+            <a href="./antesQuiz.html">Quiz</a>
             <a href="./login.html">Login</a>
         </div>
         <div class="column3">
@@ -179,10 +165,6 @@
                 <p class="p1"><img class="icone7" src="./assets/icones/iconeemail.png" alt="Ícone do email"><a
                         href="">guilhermebg2004@gmail.com</a></p>
             </div>
-            <!-- <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.2881607958625!2d-46.66425002467007!3d-23.55809197880215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59d2a5270055%3A0x3c7ea4f4c7d51fb6!2sRua%20Haddock%20Lobo%2C%20595%20-%20Cerqueira%20C%C3%A9sar%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001414-001!5e0!3m2!1spt-BR!2sbr!4v1714872768626!5m2!1spt-BR!2sbr"
-                width="260" height="260" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe> -->
         </div>
     </footer>
 </body>
