--- a/public/quiz.html
+++ b/public/quiz.html
@@ -176,7 +176,8 @@
 
     function reiniciarQuiz() {
         document.getElementById("quiz").innerHTML = `
-        <h1>Bem Vindo!</h1><br>
+        <h1 id="mensagemBemVindo">Bem Vindo!</h1><br>
+        <h2 id="perguntaNumero"></h2>
         <span id="mensagem">Clique no botão abaixo para iniciar o quiz, boa sorte!</span>
         <div id="question"></div>
         <div id="options"></div>
