--- a/public/sobre.html
+++ b/public/sobre.html
@@ -23,7 +23,7 @@
             <a href="./index.html">INICIAL</a>
             <a href="./index.html #chamaSobre">SOBRE</a>
             <a href="./index.html  #Discografia">DISCOGRAFIA</a>
-            <a href="./quiz.html">QUIZ</a>
+            <a href="./antesQuiz.html">QUIZ</a>
             <a href="./login.html">LOGIN</a>
             <a href="./cadastro.html">CADASTRO</a>
         </nav>
