--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -19,30 +19,32 @@
   <!-- -------HEADER inicio------- -->
   <div class="header">
     <div class="container">
-        <div class="header">
-            <nav class="navbar">
-                <img class="logoBandaNav" href="./index.html" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
-                <a href="./index.html">INICIAL</a>
-                <a href="./index.html #chamaSobre">SOBRE</a>
-                <a href="./index.html #Discografia">DISCOGRAFIA</a>
-                <a href="./quiz.html">QUIZ</a>
-                <a href="./login.html">LOGIN</a>
-                <a href="./cadastro.html">CADASTRO</a>
-            </nav>
-        </div>
+      <div class="header">
+        <nav class="navbar">
+          <img class="logoBandaNav" href="./index.html" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
+          <a href="./index.html">INICIAL</a>
+          <a href="./index.html #chamaSobre">SOBRE</a>
+          <a href="./index.html #Discografia">DISCOGRAFIA</a>
+          <a href="./antesQuiz.html">QUIZ</a>
+          <a href="./login.html">LOGIN</a>
+          <a href="./cadastro.html">CADASTRO</a>
+        </nav>
+      </div>
     </div>
-</div>
+  </div>
 
-<div class="espacamento">
+  <div class="espacamento">
 
-</div>
+  </div>
   <!-- -------HEADER fim------- -->
 
-  <div class="login">
-    <div class="alerta_erro">
-      <div class="card_erro" id="cardErro">
-        <span id="mensagem_erro"></span>
-      </div>
+  <div class="modal1 modal">
+    <div class="contentmodal" id="modal_erro">
+    </div>
+  </div>
+  <div class="modal2 modal">
+    <div class="contentmodal" id="modal_exito">
+      CADASTRO REALIZADO COM SUCESSO!
     </div>
   </div>
 
@@ -91,33 +93,96 @@
 </html>
 
 <script>
+
+  let caracteresEspeciais = ['@', '.', '*', '#', '$', '&']
+  let letrasMaiusculas = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z']
+
   function cadastrar() {
     aguardar();
 
     //Recupere o valor da nova input pelo nome do id
     // Agora vá para o método fetch logo abaixo
-    var nomeVar = nome_input.value;
-    var emailVar = email_input.value;
-    var senhaVar = senha_input.value;
-    var confirmacaoSenhaVar = confirmacao_senha_input.value;
+    let nomeVar = nome_input.value;
+    let emailVar = email_input.value;
+    let senhaVar = senha_input.value;
     var idadeVar = selectIdade.value
+    let confirmacaoSenhaVar = confirmacao_senha_input.value;
+    let arrobaEmail = emailVar.indexOf('@')
+    let pontoEmail = emailVar.indexOf('.')
+    let validacaoSenha = false
 
-    if (
-      nomeVar == "" ||
+
+
+    if (nomeVar == "" ||
       emailVar == "" ||
       senhaVar == "" ||
       confirmacaoSenhaVar == ""
     ) {
-      cardErro.style.display = "block";
-      mensagem_erro.innerHTML =
-        "Houve um erro ao cadastrar! Preencha todos os campos";
-
-      finalizarAguardar();
+      modal_erro.innerHTML = "PREENCHA TODOS OS CAMPOS PARA CONTINUAR!"
+      validarSessao(1)
+      return false;
+    }
+    if (pontoEmail == - 1 || arrobaEmail == -1) {
+      modal_erro.innerHTML = "O E-MAIL DEVE CONTER UM @ E UM '.'!"
+      validarSessao(1)
+      return false;
+    }
+    if (senhaVar.length < 8) {
+      modal_erro.innerHTML = "A SENHA PRECISA CONTER NO MÍNIMO OITO CARACTÉRES!"
+      validarSessao(1)
+      return;
+    } else if (senhaVar != confirmacaoSenhaVar) {
+      modal_erro.innerHTML = "SENHAS INCOMPATÍVEIS!"
+      validarSessao(1)
       return false;
     } else {
-      setInterval(sumirMensagem, 5000);
-    }
 
+      for (let caractereAtual = 0; caractereAtual < caracteresEspeciais.length; caractereAtual++) {
+        if (senhaVar.indexOf(caracteresEspeciais[caractereAtual]) !== -1) {
+          validacaoSenha = true
+          break;
+        }
+      }
+      if (validacaoSenha == false) {
+        modal_erro.innerHTML = "A SENHA PRECISA CONTER AO MENOS UM CARACTER ESPECIAL!"
+        validarSessao(1)
+        return false;
+      }
+
+      validacaoSenha = false;
+      for (let caractereAtual = 0; caractereAtual < letrasMaiusculas.length; caractereAtual++) {
+        if (senhaVar.indexOf(letrasMaiusculas[caractereAtual]) !== -1) {
+          validacaoSenha = true
+          break;
+        }
+      }
+      if (validacaoSenha == false) {
+        modal_erro.innerHTML = "A SENHA PRECISA CONTER UMA LETRA MAIUSCULA!"
+        validarSessao(1)
+        return false;
+      }
+
+      validacaoSenha = false;
+      for (let numAtual = 0; numAtual <= 9; numAtual++) {
+        if (senhaVar.indexOf(numAtual) !== -1) {
+          validacaoSenha = true
+          break;
+        }
+      }
+      if (validacaoSenha == false) {
+        modal_erro.innerHTML = "A SENHA PRECISA CONTER UM NÚMERO!"
+        validarSessao(1)
+        return false;
+      }
+
+    }
+    if (validacaoSenha == true) {
+      cadastrarUsuario(nomeVar, emailVar, senhaVar, idadeVar)
+    }
+  }
+
+
+  function cadastrarUsuario(nomeVar, emailVar, senhaVar, idadeVar) {
     // Enviando o valor da nova input
     fetch("/usuarios/cadastrar", {
       method: "POST",
@@ -130,24 +195,15 @@
         nomeServer: nomeVar,
         emailServer: emailVar,
         senhaServer: senhaVar,
-        idadeServer: idadeVar
+        idadeServer: idadeVar,
       }),
     })
       .then(function (resposta) {
         console.log("resposta: ", resposta);
 
         if (resposta.ok) {
-          cardErro.style.display = "block";
+          validarSessao(2)
 
-          mensagem_erro.innerHTML =
-            "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
-
-          setTimeout(() => {
-            window.location = "login.html";
-          }, "2000");
-
-          limparFormulario();
-          finalizarAguardar();
         } else {
           throw "Houve um erro ao tentar realizar o cadastro!";
         }
@@ -160,23 +216,40 @@
     return false;
   }
 
-  // function listar() {
-  //   fetch("/empresas/listar", {
-  //     method: "GET",
-  //   })
-  //     .then(function (resposta) {
-  //       resposta.json().then((empresas) => {
-  //         empresas.forEach((empresa) => {
-  //           listaEmpresas.innerHTML += `<option value='${empresa.id}'>${empresa.cnpj}</option>`;
-  //         });
-  //       });
-  //     })
-  //     .catch(function (resposta) {
-  //       console.log(`#ERRO: ${resposta}`);
-  //     });
-  // }
+  function validarSessao(numResposta) {
 
-  function sumirMensagem() {
-    cardErro.style.display = "none";
+    // Esconde todos os modais
+    const modais = document.querySelectorAll('.modal');
+    modais.forEach(modal => modal.style.display = 'none');
+
+    // Exibe o modal correspondente
+    const modalSelecionado = document.querySelector(`.modal${numResposta}`);
+    if (modalSelecionado) {
+      modalSelecionado.style.display = 'block';
+    }
+
+    if (numResposta == 1) {
+      setTimeout(function () {
+        sumirModal()
+        finalizarAguardar();
+        return false;
+      }, 2500)
+    }
+    else (
+      setTimeout(function () {
+        modal_exito.innerHTML = "REDIRECIONANDO A TELA DE LOGIN..."
+        setTimeout(function () {
+          window.location = "./login.html";
+        }, 3500);
+        finalizarAguardar();
+        return false;
+      }, 2500)
+    )
   }
+
+  function sumirModal() {
+    const modais = document.querySelectorAll('.modal');
+    modais.forEach(modal => modal.style.display = 'none');
+  }
+
 </script>
